DXGI
	* Added lazy enumeration of adapters to Factory and Factory1.
	* Added lazy enumeration of outputs to Adapter.

Direct3D 11
	* Fixed shader wrappers to allow getting class instances.
	* Added convenience methods to simplify getting groups of state from pipeline wrappers.

DirectWrite
	* Changed TextRenderer into ITextRenderer to allow user implementation.
	* Added Strikethrough and Underline classes
	* Removed extraneous MeasuringMethod enum.
	* Fixed a crash bug in BitmapRenderTarget for drawing glyph runs.